--- a/charts/ruan/values.yaml
+++ b/charts/ruan/values.yaml
@@ -23,6 +23,16 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: ""
 
+livenessProbe:
+  httpGet:
+    path: /
+    port: http
+
+readinessProbe:
+  httpGet:
+    path: /
+    port: http
+
 podAnnotations: {}
 
 podSecurityContext: {}
@@ -39,6 +49,7 @@ securityContext: {}
 service:
   type: ClusterIP
   port: 80
+  targetPort: 80
 
 ingress:
   enabled: false
