--- a/charts/ruan/Chart.yaml
+++ b/charts/ruan/Chart.yaml
@@ -9,3 +9,4 @@ dependencies:
     version: "7.3.14"
     repository: file://../common/mariadb/v7.3.14
     condition: mariadb.enabled
+icon: file://nginx.png
